# sit-aw-critics

./: README.md  pyproject.toml
docs/source/: conf.py  generic_principles.rst  index.rst  installation.rst  tutorials.rst
sit_aw_critics/: critics.py
